add obj2 and obj3

--- a/index.html
+++ b/index.html
@@ -134,11 +134,20 @@ class: top, right
 ]
 
 ---
+.left-column[ 
+### Software
+### Package
+### Books
+### Online learning]
+
+.right-column[![](datacamp.PNG)]
+---
 
 .left-column[ 
 ### Software
 ### Package
 ### Books
+### Online learning
 ### Shared Resources]
 
 .right-column[![](repository.PNG)]
@@ -147,8 +156,12 @@ class: top, right
 [Allison's Github](https://github.com/apreshill)
 ]
 ---
-class: inverse, middle
-# It helps you to explore data and generate plots.  
+class: inverse, middle, right
+# It helps you to &lt;/br&gt;explore data &amp; generate plots.  
+
+--
+
+## Excel + SPSS + Powerpoint
 
 ---
 
@@ -2610,6 +2623,39 @@ penguins %&gt;%
 .footnote[codes from [palmerpenguins](https://allisonhorst.github.io/palmerpenguins/articles/examples.html)
 
 ]
+
+---
+class: middle, center
+
+# This is how I used R/Rstudio for myself
+
+## [example 1](file:///C:/Users/teres/OneDrive%20-%20University%20Of%20Oregon/Backup/_Teresa%20Chen/1_Dissertation/2_Analysis/2_WALK/walk_git/walk_tidy_stats.html)
+
+## [example 2](https://pssstl.shinyapps.io/6_1_final_shiny)
+
+## [example 3](https://teresashchen.github.io/blog/)
+
+---
+class: inverse, middle, right
+
+# It has many add-on capabilities, &lt;/br&gt; i.e. building website, creating CV. 
+
+---
+class: middle, center
+
+# This is how I used R/Rstudio for others
+
+## [CV](file:///C:/Users/teres/OneDrive%20-%20University%20Of%20Oregon/9_Sideproject/wang_cv/cv2.html)
+
+## [website](https://ptpeiyuyang.netlify.app/)
+
+---
+
+class: inverse, bottom, center
+background-image: url(https://media.giphy.com/media/3oxHQjBRCjvvlHmUHm/giphy.gif)
+background-size: 50%
+
+# Don't be overwhelmed!
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
