add the last slides

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>博班必備自學力</title>
     <meta charset="utf-8" />
     <meta name="author" content="陳思樺" />
-    <meta name="date" content="2020-06-11" />
+    <meta name="date" content="2020-06-13" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies-fonts.css" rel="stylesheet" />
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 # 博班必備自學力
 ## 開源軟體R帶我看到的世界
 ### 陳思樺
-### 2020-06-11
+### 2020-06-13
 
 ---
 
@@ -2722,6 +2722,28 @@ background-size: cover
 
 &lt;img src="garrick.PNG" width="70%" /&gt;
 ]
+
+---
+
+class: inverse, middle, center
+
+## Open Sources  
+
+--
+## Research Tools  
+
+--
+## Add-on Functions  
+
+--
+## Supporting Communities  
+
+--
+## Social Responsibility
+
+--
+
+&lt;img src="https://www.pngkey.com/png/full/957-9572614_please-ask-us-any-questions-you-may-have.png" width="200"&gt;
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
