--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>博班必備自學力</title>
     <meta charset="utf-8" />
     <meta name="author" content="陳思樺" />
-    <meta name="date" content="2020-06-13" />
+    <meta name="date" content="2020-06-23" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies.css" rel="stylesheet" />
     <link href="libs/remark-css/rladies-fonts.css" rel="stylesheet" />
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 # 博班必備自學力
 ## 開源軟體R帶我看到的世界
 ### 陳思樺
-### 2020-06-13
+### 2020-06-23
 
 ---
 
@@ -86,7 +86,7 @@ class: middle, inverse
 name: objectives
 class: inverse, middle, center
 
-# R/Rstudio is awesome in many ways.
+# R/Rstudio is awesome in many different ways.
 
 --
 ### It's an open source.  
@@ -2659,7 +2659,7 @@ class: middle, center
 ## [website](https://ptpeiyuyang.netlify.app/)
 
 --
-## And this slides too!
+## And these slides too!
 ---
 
 class: inverse, bottom, center
@@ -2683,7 +2683,7 @@ background-size: cover
 
 
 ---
-# Network of the R Communities
+# Network of the R Community
 
 ![](https://reshamas.github.io/assets/images/r_community_map.png)
 
@@ -2701,7 +2701,7 @@ background-size: cover
 
 ---
 
-# R is beyond a tool.
+# R is more than just a tool.
 
 --
 
